--- a/src/scss/variables/variables.scss
+++ b/src/scss/variables/variables.scss
@@ -149,16 +149,16 @@ $button-big-font-size: 1rem;
 $input-font: $main-font;
 $input-font-size: 16px;
 $input-font-weight: 300;
-$input-line-height: 1.5;
-$input-color: $secondary-9;
-$input-color-placeholder: $secondary-4;
+$input-line-height: 1.7777;
+$input-color: var(--main-color);
+$input-color-placeholder: #828282;
 $input-border-width: 1px;
-$input-border-radius: 8px;
-$input-border-color: $secondary-4;
-$input-border-color-hover: $primary-hover;
-$input-border-color-focus: $primary-hover;
-$input-padding: 0.625em 1em;
-$input-padding-sm: 0.625em 1em;
+$input-border-radius: 0;
+$input-border-color: #bdbdbd;
+$input-border-color-hover: var(--black);
+$input-border-color-focus: var(--black);
+$input-padding: 7px 0 16px;
+$input-padding-sm: 7px 0 16px;
 $input-bg-color: $white;
 $input-margin: 5px;
 $input-focus: 0 0 20px
@@ -168,30 +168,30 @@ $input-focus: 0 0 20px
   );
 
 // textarea
-$textarea-padding: 1em 1.25em;
-$textarea-padding-sm: 0.75em 1em;
+$textarea-padding: 24px 32px;
+$textarea-padding-sm: 16px;
 $textarea-height: 100px;
 $textarea-margin: 5px;
 
 // checkbox
 $checkbox-font: $main-font;
-$checkbox-font-size: 17px;
+$checkbox-font-size: 12px;
 $checkbox-font-weight: normal;
-$checkbox-line-height: 1.2;
-$checkbox-color: currentColor;
+$checkbox-line-height: 1.6666666666;
+$checkbox-color: #828282;
 $checkbox-link-color: var(--primary-default);
 $checkbox-link-color-hover: var(--primary-hover);
 $checkbox-link-text-decoration: none;
 $checkbox-link-text-decoration-hover: none;
 $checkbox-bg-color: transparent;
 $checkbox-bg-color-active: var(--primary-default);
-$checkbox-size: 16px;
-$checkbox-icon-size: 14px;
+$checkbox-size: 24px;
+$checkbox-icon-size: 20px;
 $checkbox-icon-color: var(--white);
-$checkbox-border: none;
-$checkbox-border-radius: 4px;
-$checkbox-margin: 5px 0;
-$checkbox-custom-margin: 0 6px 0 0;
+$checkbox-border: 1px solid var(--primary-default);
+$checkbox-border-radius: 0;
+$checkbox-margin: 0;
+$checkbox-custom-margin: 0 18px 0 0;
 
 // radio
 $radio-size: 16px;
