--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -30,6 +30,7 @@
 @import 'sections/hero';
 @import 'sections/offers';
 @import 'sections/about';
+@import 'sections/map';
 @import 'sections/services';
 @import 'sections/rooms';
 
