--- a/src/scss/variables/variables.scss
+++ b/src/scss/variables/variables.scss
@@ -130,10 +130,10 @@ $button-font: $main-font;
 $button-font-size: 12px;
 $button-font-weight: normal;
 $button-line-height: 1.667;
-$button-border-width: 0;
+$button-border-width: 1px;
 $button-border-radius: 25px;
-$button-padding: 12px 2.695em;
-$button-padding-sm: 12px 2.695em;
+$button-padding: 11px 2.695em;
+$button-padding-sm: 11px 2.695em;
 $button-min-width: auto;
 $button-margin: 5px;
 
