--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -20,11 +20,15 @@
         {{> sections/hero }}
         {{> sections/offers }}
         {{> sections/about }}
+        {{> sections/map }}
         {{> sections/rooms }}
         {{> sections/services }}
       </main>
 
       {{> sections/footer }}
     </div>
+
+    <!-- tooltips -->
+    {{> tooltips/balloon }}
   </body>
 </html>
