--- a/src/scss/variables/global.scss
+++ b/src/scss/variables/global.scss
@@ -23,13 +23,19 @@ html {
   @include defineColorRGB(--white, $white);
   @include defineColorRGB(--secondary-1, $secondary-1);
   @include defineColorRGB(--secondary-3, $secondary-3);
+
+  &:not(.is-ready) {
+    * {
+      transition: none !important;
+    }
+  }
 }
 
 html,
 body {
   width: 100%;
   height: 100%;
-  scroll-behavior: smooth;
+  // scroll-behavior: smooth;
 }
 
 .content {
