--- a/src/modules/components/card-room.hbs
+++ b/src/modules/components/card-room.hbs
@@ -46,7 +46,9 @@
       <div class="card-room__title">
         Двухместный стандарт — 20 номеров в домах срубах
       </div>
-      <a href="#" class="card-room__link"> Показать на карте </a>
+      <span data-modal-target="#modal-picture" class="link card-room__link">
+        Показать на карте
+      </span>
     </div>
 
     <div class="card-room__total">
