--- a/src/scss/variables/global.scss
+++ b/src/scss/variables/global.scss
@@ -12,8 +12,6 @@ html {
   --bg-color: var(--bg-main);
   --header-color: var(--white);
 
-  overflow-x: hidden;
-
   @include defineColorRGB(--primary-disable, $primary-disable);
   @include defineColorRGB(--primary-default, $primary-default);
   @include defineColorRGB(--primary-hover, $primary-hover);
@@ -34,8 +32,12 @@ html {
 html,
 body {
   width: 100%;
-  height: 100%;
+  // height: 100%;
   // scroll-behavior: smooth;
+}
+
+body {
+  min-height: var(--vh, 100vh);
 }
 
 .content {
