добавил кастомный скролл и параллакс + анимашки

--- a/src/modules/sections/about.hbs
+++ b/src/modules/sections/about.hbs
@@ -1,10 +1,25 @@
 <!-- about -->
 <section class="about">
-  <div class="about__decor-title about__decor-title--top"> Отдыых в горах </div>
+  <div
+    data-scroll
+    data-scroll-speed="1"
+    data-scroll-direction="horizontal"
+    class="about__decor-title about__decor-title--top"
+  >
+    Отдыых в горах
+  </div>
   <div class="container container--lg">
     {{> components/card-about }}
   </div>
   <!-- ./ End of container -->
-  <div class="about__decor-title about__decor-title--bottom"> Адыгеи </div>
+  <div
+    data-scroll
+    data-scroll-speed="2"
+    data-scroll-direction="horizontal"
+    data-scroll-offset="25%"
+    class="about__decor-title about__decor-title--bottom"
+  >
+    Адыгеи
+  </div>
 </section>
 <!-- ./ End of about -->
