--- a/src/modules/sections/footer.hbs
+++ b/src/modules/sections/footer.hbs
@@ -3,7 +3,7 @@
   <div class="container">
     <!-- wrap -->
     <div class="footer__wrap">
-      <div class="footer__card">
+      <div data-scroll data-scroll-speed="2" class="footer__card">
         <div class="footer__wrap">
           <div class="footer__left">
             <h3 class="footer__title">
