--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,6 +5,7 @@
 // Libs - Библиотеки
 @import '~swiper/swiper-bundle.min.css';
 @import '~plyr/dist/plyr.css';
+@import '~locomotive-scroll/dist/locomotive-scroll.css';
 
 // Variables - Переменные
 @import 'variables/fonts';
