--- a/src/modules/components/card-about.hbs
+++ b/src/modules/components/card-about.hbs
@@ -1,4 +1,4 @@
-<div class="card-about">
+<div data-scroll data-scroll-speed="2" class="card-about">
   <div class="card-about__wrapper">
     <div class="card-about__banner">
       <img src="../../img/card-about.jpg" alt="" />
