--- a/src/modules/sections/services.hbs
+++ b/src/modules/sections/services.hbs
@@ -1,13 +1,20 @@
 <!-- services -->
 <section class="services">
   <div class="container">
-    <div class="services__title"> Неограниченные возможности для досуга </div>
+    <div data-scroll data-scroll-speed="2" class="services__title">
+      Неограниченные возможности для досуга
+    </div>
 
     <div class="services__list">
       <div class="services__item">
         <div class="card-service">
           <div class="card-service__wrapper">
-            <div class="card-service__col card-service__col--25">
+            <div
+              data-scroll
+              data-scroll-speed="4"
+              data-scroll-offset="25%"
+              class="card-service__col card-service__col--25"
+            >
               <div class="card-service__info">
                 <div class="card-service__number"></div>
                 <h3 class="card-service__title h3" data-title="Рафтинг">
@@ -22,6 +29,8 @@
               </div>
             </div>
             <div
+              data-scroll
+              data-scroll-speed="2"
               class="card-service__col card-service__col--75 card-service__col--mobile-top"
             >
               <div class="card-service__banner">
@@ -37,12 +46,21 @@
       <div class="services__item">
         <div class="card-service">
           <div class="card-service__wrapper">
-            <div class="card-service__col card-service__col--25">
+            <div
+              data-scroll
+              data-scroll-speed="2"
+              class="card-service__col card-service__col--25"
+            >
               <div class="card-service__banner">
                 <img src="../../img/services/service-2.jpg" alt="" />
               </div>
             </div>
-            <div class="card-service__col card-service__col--75">
+            <div
+              data-scroll
+              data-scroll-speed="4"
+              data-scroll-offset="25%"
+              class="card-service__col card-service__col--75"
+            >
               <div class="card-service__info">
                 <div class="card-service__number"></div>
                 <h3 class="card-service__title h3" data-title="Джиппинг">
@@ -66,22 +84,47 @@
       <!-- End of services__item -->
 
       <div class="services__item">
-        <div class="card-service">
+        <div data-scroll data-scroll-speed="2" class="card-service">
           <div class="card-service__wrapper">
-            <div class="card-service__col--100">
+            <div
+              data-scroll
+              data-scroll-speed="-2"
+              class="card-service__col card-service__col--100"
+            >
               <div class="card-service__banner">
                 <img src="../../img/services/service-3.jpg" alt="" />
               </div>
               <div class="card-service__info">
-                <div class="card-service__number"></div>
-                <h3 class="card-service__title h3"> Конные прогулки </h3>
-                <p class="card-service__descr">
+                <div
+                  data-scroll
+                  data-scroll-speed="2"
+                  class="card-service__number"
+                ></div>
+                <h3
+                  data-scroll
+                  data-scroll-speed="2"
+                  class="card-service__title h3"
+                >
+                  Конные прогулки
+                </h3>
+                <p
+                  data-scroll
+                  data-scroll-speed="2"
+                  class="card-service__descr"
+                >
                   Гордые, красивые животные словно магнитом притягивают к себе
                   внимание детей и не оставят равнодушным сердца взрослых.
                   Регулярные катания на лошадях приносят неоспоримую пользу
                   здоровью и оставляют в душе радостные воспоминания.
                 </p>
-                <a href="#" class="card-service__link"> Подробнее </a>
+                <a
+                  data-scroll
+                  data-scroll-speed="2"
+                  href="#"
+                  class="card-service__link"
+                >
+                  Подробнее
+                </a>
               </div>
             </div>
           </div>
@@ -93,12 +136,17 @@
       <div class="services__item">
         <div class="card-service">
           <div class="card-service__wrapper">
-            <div class="card-service__col card-service__col--25">
+            <div
+              data-scroll
+              data-scroll-speed="4"
+              data-scroll-offset="25%"
+              class="card-service__col card-service__col--25"
+            >
               <div class="card-service__info">
                 <div class="card-service__number"></div>
-                <h3 class="card-service__title h3" data-title="Йога"
-                  >Йога-тур</h3
-                >
+                <h3 class="card-service__title h3" data-title="Йога">
+                  Йога-тур
+                </h3>
                 <p class="card-service__descr"
                   >Туристический комплекс "Белая река - Даховская" —идеальное
                   место для проведения оздоровительных йога-туров, практик по
@@ -109,6 +157,8 @@
               </div>
             </div>
             <div
+              data-scroll
+              data-scroll-speed="2"
               class="card-service__col card-service__col--75 card-service__col--mobile-top"
             >
               <div class="card-service__banner">
@@ -122,26 +172,50 @@
       <!-- End of services__item -->
 
       <div class="services__item">
-        <div class="card-service">
+        <div data-scroll data-scroll-speed="2" class="card-service">
           <div class="card-service__wrapper">
-            <div class="card-service__col--100">
+            <div
+              data-scroll
+              data-scroll-speed="-2"
+              class="card-service__col card-service__col--100"
+            >
               <div class="card-service__banner">
                 <img src="../../img/services/service-5.jpg" alt="" />
               </div>
               <div class="card-service__info">
-                <div class="card-service__number"></div>
-                <h3 class="card-service__title h3">Экскурсионные программы</h3>
-                <p class="card-service__descr"
-                  >В экскурсионный программы входят поездки и прогулочные походы
+                <div
+                  data-scroll
+                  data-scroll-speed="2"
+                  class="card-service__number"
+                ></div>
+                <h3
+                  data-scroll
+                  data-scroll-speed="2"
+                  class="card-service__title h3"
+                  >Экскурсионные программы</h3
+                >
+                <p
+                  data-scroll
+                  data-scroll-speed="2"
+                  class="card-service__descr"
+                >
+                  В экскурсионный программы входят поездки и прогулочные походы
                   по природным и историческим достопримечательностям. Турбаза
                   находится в уникальном месте — у высокогорного заповедного
                   плато Лаго-Наки, знаменитого своими водопадами с кристально
                   чистой водой и живописными альпийскими лугами. Буквально в
                   нескольких шагах от базы отдыха катит свои воды величественная
                   река Белая, а в пешей доступности — множество интересных
-                  лесных тропинок.</p
+                  лесных тропинок.
+                </p>
+                <a
+                  data-scroll
+                  data-scroll-speed="2"
+                  href="#"
+                  class="card-service__link"
                 >
-                <a href="#" class="card-service__link">Подробнее</a>
+                  Подробнее
+                </a>
               </div>
             </div>
           </div>
@@ -153,26 +227,35 @@
       <div class="services__item">
         <div class="card-service">
           <div class="card-service__wrapper">
-            <div class="card-service__col card-service__col--25">
+            <div
+              data-scroll
+              data-scroll-speed="2"
+              class="card-service__col card-service__col--25"
+            >
               <div class="card-service__banner">
                 <img src="../../img/services/service-6.jpg" alt="" />
               </div>
             </div>
-            <div class="card-service__col card-service__col--75">
+            <div
+              data-scroll
+              data-scroll-speed="4"
+              data-scroll-offset="25%"
+              class="card-service__col card-service__col--75"
+            >
               <div class="card-service__info">
                 <div class="card-service__number"></div>
                 <h3 class="card-service__title h3" data-title="Источники"
                   >Горячие источники</h3
                 >
-                <p class="card-service__descr"
-                  >На территории республики Адыгея находятся горячие источники,
+                <p class="card-service__descr">
+                  На территории республики Адыгея находятся горячие источники,
                   которые располагаются в непосредственной близости к
                   вулканическим возвышенностям и их образованиям. Источники
                   обладают целебными свойствами и многие туристы целенаправленно
                   приезжают со всей России на оздоровительные процедуры или
-                  просто насладиться купанием в прохладную погоду.</p
-                >
-                <a href="#" class="card-service__link">Подробнее</a>
+                  просто насладиться купанием в прохладную погоду.
+                </p>
+                <a href="#" class="card-service__link"> Подробнее </a>
               </div>
             </div>
           </div>
@@ -184,23 +267,30 @@
       <div class="services__item">
         <div class="card-service">
           <div class="card-service__wrapper">
-            <div class="card-service__col card-service__col--25">
+            <div
+              data-scroll
+              data-scroll-speed="4"
+              data-scroll-offset="25%"
+              class="card-service__col card-service__col--25"
+            >
               <div class="card-service__info">
                 <div class="card-service__number"></div>
-                <h3 class="card-service__title h3" data-title="Тимбилдинг"
-                  >Корпоративный отдых</h3
-                >
-                <p class="card-service__descr"
-                  >Веселые подвижные игры, активные конкурсы и совместные
+                <h3 class="card-service__title h3" data-title="Тимбилдинг">
+                  Корпоративный отдых
+                </h3>
+                <p class="card-service__descr">
+                  Веселые подвижные игры, активные конкурсы и совместные
                   трудности – вот залог успешного тимбилдинга. Наша турбаза
                   предлагает конные прогулки, рафтинг по реке Белая, катание на
                   квадроциклах по крутым склонам, зарницу, квесты и многое
-                  другое.</p
-                >
-                <a href="#" class="card-service__link">Подробнее</a>
+                  другое.
+                </p>
+                <a href="#" class="card-service__link"> Подробнее </a>
               </div>
             </div>
             <div
+              data-scroll
+              data-scroll-speed="2"
               class="card-service__col card-service__col--75 card-service__col--mobile-top"
             >
               <div class="card-service__banner">
