--- a/src/scss/components/card-offer.scss
+++ b/src/scss/components/card-offer.scss
@@ -13,6 +13,8 @@
   }
 
   &__info {
+    position: relative;
+    z-index: 2;
     display: flex;
     flex-shrink: 1.4;
     align-items: center;
@@ -44,6 +46,7 @@
     // width: 63.869%;
     width: 100%;
     max-width: 1096px;
+    overflow: hidden;
 
     @include max-width($touch) {
       width: 100%;
