--- a/src/scss/components/card-service.scss
+++ b/src/scss/components/card-service.scss
@@ -8,6 +8,28 @@
     align-items: flex-end;
   }
 
+  &__col {
+    width: 100%;
+
+    .card-service__banner {
+      img {
+        [data-scroll-container] & {
+          opacity: 0;
+          transform: scale(1.4);
+        }
+      }
+    }
+
+    &.is-inview {
+      .card-service__banner {
+        img {
+          opacity: 1;
+          transform: none;
+        }
+      }
+    }
+  }
+
   &__col--25 {
     flex: 1 1 476px;
 
@@ -51,6 +73,7 @@
         position: absolute;
         top: 0;
         left: 0;
+        z-index: 1;
         width: 100%;
         height: 100%;
         content: '';
@@ -70,9 +93,20 @@
       color: inherit;
     }
 
+    .card-service__link {
+      &:hover {
+        color: #bdbdbd;
+      }
+    }
+
     .card-service__title::before {
       display: none;
     }
+  }
+
+  &__info {
+    position: relative;
+    z-index: 2;
   }
 
   &__number {
@@ -121,6 +155,7 @@
   }
 
   &__link {
+    display: inline-block;
     font-size: 0.625rem;
     line-height: 2;
     color: var(--primary-default);
@@ -128,10 +163,13 @@
   }
 
   &__banner {
+    overflow: hidden;
+
     img {
       object-fit: cover;
       width: 100%;
       height: 100%;
+      transition: opacity 1s ease, transform 1s ease;
     }
   }
 
