--- a/src/scss/sections/offers.scss
+++ b/src/scss/sections/offers.scss
@@ -40,6 +40,57 @@
       display: none;
     }
   }
+
+  .swiper-slide {
+    .card-offer {
+      &__sale,
+      &__title-wrapper,
+      &__descr {
+        opacity: 0;
+        transition: transform 0.5s ease, opacity 0.5s ease;
+        transition-delay: 0s;
+        transform: translateY(20px);
+      }
+
+      &__banner {
+        img {
+          transition: transform 0.5s ease;
+          transition-delay: 0s;
+          transform: scale(1.2);
+        }
+      }
+    }
+
+    &.swiper-slide-active {
+      .card-offer {
+        &__sale,
+        &__title-wrapper,
+        &__descr {
+          opacity: 1;
+          transform: none;
+        }
+
+        &__sale {
+          transition-delay: 0s;
+        }
+
+        &__title-wrapper {
+          transition-delay: 0.2s;
+        }
+
+        &__descr {
+          transition-delay: 0.4s;
+        }
+
+        &__banner {
+          img {
+            transition-delay: 0.3s;
+            transform: none;
+          }
+        }
+      }
+    }
+  }
 }
 
 .slider-footer {
