--- a/src/scss/variables/global.scss
+++ b/src/scss/variables/global.scss
@@ -27,6 +27,17 @@ html {
       transition: none !important;
     }
   }
+
+  &.has-scroll-smooth {
+    // transform: translateZ(0);
+    // backface-visibility: hidden;
+
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
 }
 
 html,
