--- a/src/modules/sections/footer.hbs
+++ b/src/modules/sections/footer.hbs
@@ -108,6 +108,20 @@
                     <a href="tel: +79282103110" class="footer__phone">
                       +7 (928) 210-31-10
                     </a>
+
+                    <div class="footer__socials">
+                      <a href="#" class="footer__social footer__social--w">
+                        <svg class="svg">
+                          <use xlink:href="svg/sprite.svg#social-w"></use>
+                        </svg>
+                      </a>
+
+                      <a href="#" class="footer__social footer__social--t">
+                        <svg class="svg">
+                          <use xlink:href="svg/sprite.svg#social-t"></use>
+                        </svg>
+                      </a>
+                    </div>
                   </li>
                 </ul>
               </div>
