--- a/src/scss/components/card-service.scss
+++ b/src/scss/components/card-service.scss
@@ -13,7 +13,7 @@
 
     .card-service__banner {
       img {
-        [data-scroll-container] & {
+        .has-scroll-smooth & {
           opacity: 0;
           transform: scale(1.4);
         }
