--- a/src/modules/components/card-offer.hbs
+++ b/src/modules/components/card-offer.hbs
@@ -15,7 +15,7 @@
       </div>
     </div>
     <div class="card-offer__banner">
-      <img src="../../img/card-offer-1.jpg" alt="" />
+      <img width="1096" height="764" src="../../img/card-offer-1.jpg" alt="" />
     </div>
   </div>
 </div>
