--- a/src/modules/components/card-room.hbs
+++ b/src/modules/components/card-room.hbs
@@ -7,6 +7,8 @@
             <div class="card-room__slide swiper-slide">
               <div class="card-room__img-wrapper">
                 <img
+                  width="548"
+                  height="537"
                   data-src="../../img/room-1.jpg"
                   alt=""
                   class="card-room__img swiper-lazy"
@@ -17,6 +19,8 @@
             <div class="card-room__slide swiper-slide">
               <div class="card-room__img-wrapper">
                 <img
+                  width="548"
+                  height="537"
                   data-src="../../img/room-2.jpg"
                   alt=""
                   class="card-room__img swiper-lazy"
@@ -27,6 +31,8 @@
             <div class="card-room__slide swiper-slide">
               <div class="card-room__img-wrapper">
                 <img
+                  width="548"
+                  height="537"
                   data-src="../../img/room-1.jpg"
                   alt=""
                   class="card-room__img swiper-lazy"
