--- a/src/modules/sections/header.hbs
+++ b/src/modules/sections/header.hbs
@@ -6,7 +6,12 @@
       <div class="header__left">
         <!-- header__logo -->
         <a href="#" class="header__logo" title="Белая река Даховская">
-          <img src="img/svg/logo.svg" alt="Белая река Даховская" />
+          <img
+            width="144"
+            height="38"
+            src="../../img/svg/logo.svg"
+            alt="Белая река Даховская"
+          />
         </a>
         <!-- ./ End of .header__logo -->
 
