--- a/src/modules/sections/hero.hbs
+++ b/src/modules/sections/hero.hbs
@@ -137,36 +137,56 @@
 
             <div data-slider-delay="4000" class="hero-slider swiper-container">
               <div class="swiper-wrapper">
-                <div class="hero-slide swiper-slide">
+                <div
+                  class="hero-slide swiper-slide"
+                  style="width: 228px; margin-right: 20px"
+                >
                   <div class="hero-slide__wrap">
                     <img
+                      width="228"
+                      height="156"
                       src="../../img/hero-bg-1.jpg"
                       alt=""
                       class="hero-slide__bg"
                     />
                   </div>
                 </div>
-                <div class="hero-slide swiper-slide">
+                <div
+                  class="hero-slide swiper-slide"
+                  style="width: 228px; margin-right: 20px"
+                >
                   <div class="hero-slide__wrap">
                     <img
+                      width="228"
+                      height="156"
                       src="../../img/hero-bg-2.jpg"
                       alt=""
                       class="hero-slide__bg"
                     />
                   </div>
                 </div>
-                <div class="hero-slide swiper-slide">
+                <div
+                  class="hero-slide swiper-slide"
+                  style="width: 228px; margin-right: 20px"
+                >
                   <div class="hero-slide__wrap">
                     <img
+                      width="228"
+                      height="156"
                       src="../../img/hero-bg-3.jpg"
                       alt=""
                       class="hero-slide__bg"
                     />
                   </div>
                 </div>
-                <div class="hero-slide swiper-slide">
+                <div
+                  class="hero-slide swiper-slide"
+                  style="width: 228px; margin-right: 20px"
+                >
                   <div class="hero-slide__wrap">
                     <img
+                      width="228"
+                      height="156"
                       src="../../img/hero-bg-4.jpg"
                       alt=""
                       class="hero-slide__bg"
