--- a/src/modules/sections/services.hbs
+++ b/src/modules/sections/services.hbs
@@ -34,7 +34,12 @@
               class="card-service__col card-service__col--75 card-service__col--mobile-top"
             >
               <div class="card-service__banner">
-                <img src="../../img/services/service-1.jpg" alt="" />
+                <img
+                  width="983"
+                  height="647"
+                  src="../../img/services/service-1.jpg"
+                  alt=""
+                />
               </div>
             </div>
           </div>
@@ -52,7 +57,12 @@
               class="card-service__col card-service__col--25"
             >
               <div class="card-service__banner">
-                <img src="../../img/services/service-2.jpg" alt="" />
+                <img
+                  width="487"
+                  height="566"
+                  src="../../img/services/service-2.jpg"
+                  alt=""
+                />
               </div>
             </div>
             <div
@@ -92,7 +102,12 @@
               class="card-service__col card-service__col--100"
             >
               <div class="card-service__banner">
-                <img src="../../img/services/service-3.jpg" alt="" />
+                <img
+                  width="1470"
+                  height="820"
+                  src="../../img/services/service-3.jpg"
+                  alt=""
+                />
               </div>
               <div class="card-service__info">
                 <div
@@ -162,7 +177,12 @@
               class="card-service__col card-service__col--75 card-service__col--mobile-top"
             >
               <div class="card-service__banner">
-                <img src="../../img/services/service-4.jpg" alt="" />
+                <img
+                  width="983"
+                  height="647"
+                  src="../../img/services/service-4.jpg"
+                  alt=""
+                />
               </div>
             </div>
           </div>
@@ -180,7 +200,12 @@
               class="card-service__col card-service__col--100"
             >
               <div class="card-service__banner">
-                <img src="../../img/services/service-5.jpg" alt="" />
+                <img
+                  width="1470"
+                  height="820"
+                  src="../../img/services/service-5.jpg"
+                  alt=""
+                />
               </div>
               <div class="card-service__info">
                 <div
@@ -233,7 +258,12 @@
               class="card-service__col card-service__col--25"
             >
               <div class="card-service__banner">
-                <img src="../../img/services/service-6.jpg" alt="" />
+                <img
+                  width="487"
+                  height="566"
+                  src="../../img/services/service-6.jpg"
+                  alt=""
+                />
               </div>
             </div>
             <div
@@ -294,7 +324,12 @@
               class="card-service__col card-service__col--75 card-service__col--mobile-top"
             >
               <div class="card-service__banner">
-                <img src="../../img/services/service-7.jpg" alt="" />
+                <img
+                  width="983"
+                  height="647"
+                  src="../../img/services/service-7.jpg"
+                  alt=""
+                />
               </div>
             </div>
           </div>
