--- a/src/modules/components/card-about.hbs
+++ b/src/modules/components/card-about.hbs
@@ -1,7 +1,7 @@
 <div data-scroll data-scroll-speed="2" class="card-about">
   <div class="card-about__wrapper">
     <div class="card-about__banner">
-      <img src="../../img/card-about.jpg" alt="" />
+      <img width="620" height="711" src="../../img/card-about.jpg" alt="" />
     </div>
     <div class="card-about__info">
       <div class="card-about__content">
