правки по баглисту

--- a/src/modules/sections/rooms.hbs
+++ b/src/modules/sections/rooms.hbs
@@ -4,7 +4,9 @@
     <div class="rooms">
       <div class="rooms__headline">
         <h2> Номерной фонд </h2>
-        <span class="link"> Карта-схема </span>
+        <span data-modal-target="#modal-picture" class="link">
+          Карта-схема
+        </span>
       </div>
 
       <div class="rooms__wrapper">
