--- a/src/modules/sections/services.hbs
+++ b/src/modules/sections/services.hbs
@@ -17,9 +17,18 @@
             >
               <div class="card-service__info">
                 <div class="card-service__number"></div>
-                <h3 class="card-service__title h3" data-title="Рафтинг">
-                  Рафтинг
-                </h3>
+                <div class="card-service__title-wrapper">
+                  <span
+                    data-scroll
+                    data-scroll-speed="2"
+                    data-scroll-direction="horizontal"
+                    class="card-service__title-placeholder about__decor-title"
+                  >
+                    Рафтинг
+                  </span>
+
+                  <h3 class="card-service__title h3"> Рафтинг </h3>
+                </div>
                 <p class="card-service__descr">
                   Несравнимый ни с чем всплеск адреналина, возможность проверить
                   свою силу и выносливость, обуздать стихию непокорной горной
@@ -73,9 +82,18 @@
             >
               <div class="card-service__info">
                 <div class="card-service__number"></div>
-                <h3 class="card-service__title h3" data-title="Джиппинг">
-                  Джиппинг
-                </h3>
+                <div class="card-service__title-wrapper">
+                  <span
+                    data-scroll
+                    data-scroll-speed="2"
+                    data-scroll-direction="horizontal"
+                    class="card-service__title-placeholder about__decor-title"
+                  >
+                    Джиппинг
+                  </span>
+
+                  <h3 class="card-service__title h3"> Джиппинг </h3>
+                </div>
                 <p class="card-service__descr">
                   Наш туристический комплекс предлагает прокатиться с ветерком
                   на джиппе по самым красивым местам вблизи Белой реки и Плато
@@ -159,9 +177,18 @@
             >
               <div class="card-service__info">
                 <div class="card-service__number"></div>
-                <h3 class="card-service__title h3" data-title="Йога">
-                  Йога-тур
-                </h3>
+                <div class="card-service__title-wrapper">
+                  <span
+                    data-scroll
+                    data-scroll-speed="2"
+                    data-scroll-direction="horizontal"
+                    class="card-service__title-placeholder about__decor-title"
+                  >
+                    Йога-тур
+                  </span>
+
+                  <h3 class="card-service__title h3"> Йога-тур </h3>
+                </div>
                 <p class="card-service__descr"
                   >Туристический комплекс "Белая река - Даховская" —идеальное
                   место для проведения оздоровительных йога-туров, практик по
@@ -274,9 +301,18 @@
             >
               <div class="card-service__info">
                 <div class="card-service__number"></div>
-                <h3 class="card-service__title h3" data-title="Источники"
-                  >Горячие источники</h3
-                >
+                <div class="card-service__title-wrapper">
+                  <span
+                    data-scroll
+                    data-scroll-speed="2"
+                    data-scroll-direction="horizontal"
+                    class="card-service__title-placeholder about__decor-title"
+                  >
+                    Источники
+                  </span>
+
+                  <h3 class="card-service__title h3"> Источники </h3>
+                </div>
                 <p class="card-service__descr">
                   На территории республики Адыгея находятся горячие источники,
                   которые располагаются в непосредственной близости к
@@ -305,9 +341,18 @@
             >
               <div class="card-service__info">
                 <div class="card-service__number"></div>
-                <h3 class="card-service__title h3" data-title="Тимбилдинг">
-                  Корпоративный отдых
-                </h3>
+                <div class="card-service__title-wrapper">
+                  <span
+                    data-scroll
+                    data-scroll-speed="2"
+                    data-scroll-direction="horizontal"
+                    class="card-service__title-placeholder about__decor-title"
+                  >
+                    Тимбилдинг
+                  </span>
+
+                  <h3 class="card-service__title h3"> Тимбилдинг </h3>
+                </div>
                 <p class="card-service__descr">
                   Веселые подвижные игры, активные конкурсы и совместные
                   трудности – вот залог успешного тимбилдинга. Наша турбаза
