--- a/src/scss/sections/about.scss
+++ b/src/scss/sections/about.scss
@@ -43,7 +43,9 @@
     // &--top {
     // }
 
-    // &--bottom {
-    // }
+    &--bottom {
+      position: relative;
+      left: 50%;
+    }
   }
 }
