--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -23,6 +23,7 @@
           {{> sections/about }}
           {{> sections/map }}
           {{> sections/rooms }}
+          {{> sections/about-with-slider }}
           {{> sections/services }}
         </main>
 
