--- a/src/scss/sections/about.scss
+++ b/src/scss/sections/about.scss
@@ -1,5 +1,6 @@
 .about {
   padding: 100px 0;
+  overflow-x: hidden;
 
   @include max-width($desktop-sm) {
     padding: 60px 0;
@@ -46,6 +47,43 @@
     &--bottom {
       position: relative;
       left: 50%;
+    }
+  }
+  &__slider {
+    max-width: 620px;
+    height: 100%;
+    overflow: hidden;
+
+    @include max-width(900px) {
+      max-width: 100%;
+    }
+    &-wrap {
+      position: relative;
+      height: 100%;
+    }
+  }
+  &__slide {
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  &__button {
+    &-navigation {
+      position: absolute;
+      right: 16px;
+      bottom: 16px;
+      .button-icon {
+        @include max-width(768px) {
+          --size: 45px;
+        }
+      }
+    }
+    &--prev {
+      svg {
+        transform: rotate(180deg);
+      }
     }
   }
 }
