добавил атрубат для кнопок в тултипе

--- a/src/modules/sections/map.hbs
+++ b/src/modules/sections/map.hbs
@@ -52,10 +52,12 @@
                     btn1: {
                       name: 'забронировать',
                       href: '#',
+                      target: '_self',
                     },
                     btn2: {
                       name: 'Подробнее',
                       href: '#',
+                      target: '_blank',
                     },
                   },
                 },
@@ -77,10 +79,12 @@
                     btn1: {
                       name: 'забронировать',
                       href: '#',
+                      target: '_self',
                     },
                     btn2: {
                       name: 'Подробнее',
                       href: '#',
+                      target: '_blank',
                     },
                   },
                 },
