--- a/src/scss/sections/footer.scss
+++ b/src/scss/sections/footer.scss
@@ -160,6 +160,39 @@
 }
 
 .footer__block {
+  &-wrap {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 44px;
+
+    @include max-width($touch) {
+      justify-content: flex-start;
+    }
+
+    @include max-width(500px) {
+      flex-direction: column;
+    }
+    .footer__block {
+      &:first-child {
+        margin-right: 20px;
+
+        @include max-width(500px) {
+          margin-right: 0;
+        }
+      }
+    }
+  }
+  &-socials {
+    .footer__socials {
+      display: flex;
+      flex-wrap: wrap;
+      max-width: 190px;
+      margin-left: 0;
+    }
+    .footer__social {
+      margin: 3px;
+    }
+  }
   &:not(:last-child) {
     margin-bottom: 44px;
   }
@@ -214,12 +247,30 @@
   &:not(:last-child) {
     margin-bottom: 8px;
   }
+
+  @include max-width(1000px) {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  @include max-width($touch) {
+    flex-direction: row;
+    align-items: center;
+  }
 }
 
 .footer__socials {
   display: inline-flex;
   align-items: center;
   margin-left: 17px;
+
+  @include max-width(1000px) {
+    margin-left: 0;
+  }
+
+  @include max-width($touch) {
+    margin-left: 17px;
+  }
 }
 
 .footer__social {
@@ -249,6 +300,44 @@
 
   .svg {
     font-size: 32px;
+  }
+
+  &--vk {
+    width: 24px;
+    height: 24px;
+    color: var(--white);
+    background-color: #07f;
+    border-radius: 100%;
+    transition: 0.2s ease;
+    &:hover {
+      color: var(--white);
+      background-color: rgb(10, 66, 131);
+      .svg {
+        color: var(--white);
+      }
+    }
+    .svg {
+      font-size: 14px;
+    }
+  }
+
+  &--ok {
+    width: 24px;
+    height: 24px;
+    color: var(--white);
+    background-color: #ee8108;
+    border-radius: 100%;
+    transition: 0.2s ease;
+    &:hover {
+      color: var(--white);
+      background-color: rgb(170, 93, 5);
+      .svg {
+        color: var(--white);
+      }
+    }
+    .svg {
+      font-size: 14px;
+    }
   }
 }
 
