добавил иконку youtube

--- a/src/modules/sections/footer-new.hbs
+++ b/src/modules/sections/footer-new.hbs
@@ -141,7 +141,7 @@
 
                     <a href="#" class="footer__social footer__social--ok">
                       <svg class="svg">
-                        <use xlink:href="svg/sprite.svg#ok"></use>
+                        <use xlink:href="svg/sprite.svg#yt"></use>
                       </svg>
                     </a>
                   </div>
