добавил страницу restaurant

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -34,6 +34,7 @@
 @import 'sections/map';
 @import 'sections/services';
 @import 'sections/rooms';
+@import 'sections/restaurant';
 
 // Themes - Темы
 @import 'themes/default';
