--- a/src/scss/variables/variables.scss
+++ b/src/scss/variables/variables.scss
@@ -21,12 +21,18 @@ $secondary-5: #8f9bba;
 $secondary-6: #68769f;
 $secondary-7: #485585;
 $secondary-8: #2d396b;
-$secondary-9: #1b2559;
+$secondary-9: #316c93;
 $success: #01b574;
 $error: #e04245;
 $progress: #f2994a;
 $bg-main: #deebf4;
 $blue: #446de1;
+$gray-2: #333;
+$gray-3: #e0e0e0;
+$gray-4: #fbfbfb;
+$gray-5: #f5f8fa;
+$gray-6: #828282;
+$gray-7: #f2f2f2;
 
 $ripple-default: radial-gradient(
   rgba(var(--primary-hover-rgb), 1) 0,
