--- a/src/scss/themes/default.scss
+++ b/src/scss/themes/default.scss
@@ -20,6 +20,12 @@ html {
   --progress: #{$progress};
   --bg-main: #{$bg-main};
   --blue: #{$blue};
+  --gray-2: #{$gray-2};
+  --gray-3: #{$gray-3};
+  --gray-4: #{$gray-4};
+  --gray-5: #{$gray-5};
+  --gray-6: #{$gray-6};
+  --gray-7: #{$gray-7};
   --ripple-default: #{$ripple-default};
   --ripple-secondary: #{$ripple-secondary};
 }
